--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
+    "vue-sweetalert2": "^5.0.11",
     "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
